--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" type="image/x-icon" href="images/icons/favicon.ico">
 </head>
+
 <body class="bg-light">
     <div class="container-fluid p-0">
-        <!-- Header -->
         <header class="bg-primary text-white py-4">
             <div class="container">
                 <div class="row align-items-center">
@@ -18,12 +20,11 @@
                         <h1 class="h3 mb-1">Петушкова Дарья</h1>
                         <p class="mb-0 opacity-75">Студент-разработчик</p>
                     </div>
-                    
+
                 </div>
             </div>
         </header>
 
-        <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -56,15 +57,14 @@
             </div>
         </nav>
 
-        <!-- Main Content -->
         <main class="container my-5">
-            <!-- Profile Section -->
             <section class="mb-5">
                 <div class="card shadow-sm">
                     <div class="card-body p-4">
                         <div class="row align-items-center">
                             <div class="col-md-3 text-center mb-3 mb-md-0">
-                                <img src="images/photo.jpg" alt="Фото студента" class="img-fluid rounded-circle" style="width: 150px; height: 150px; object-fit: cover;">
+                                <img src="images/photo.jpg" alt="Фото студента" class="img-fluid rounded-circle"
+                                    style="width: 150px; height: 150px; object-fit: cover;">
                             </div>
                             <div class="col-md-9">
                                 <h2 class="card-title h4 text-primary">Привет! Я Дарья</h2>
@@ -83,7 +83,6 @@
                 </div>
             </section>
 
-            <!-- Skills Section -->
             <section class="mb-5">
                 <div class="card shadow-sm">
                     <div class="card-header bg-light">
@@ -97,19 +96,19 @@
                                 <div class="mb-3">
                                     <div class="d-flex justify-content-between mb-1">
                                         <span>HTML/CSS</span>
-                                        <span class="text-primary">90%</span>
+                                        <span class="text-primary">60%</span>
                                     </div>
                                     <div class="progress" style="height: 8px;">
-                                        <div class="progress-bar bg-primary" style="width: 90%"></div>
+                                        <div class="progress-bar bg-primary" style="width: 60%"></div>
                                     </div>
                                 </div>
                                 <div class="mb-3">
                                     <div class="d-flex justify-content-between mb-1">
                                         <span>JavaScript</span>
-                                        <span class="text-primary">75%</span>
+                                        <span class="text-primary">30%</span>
                                     </div>
                                     <div class="progress" style="height: 8px;">
-                                        <div class="progress-bar bg-success" style="width: 75%"></div>
+                                        <div class="progress-bar bg-success" style="width: 30%"></div>
                                     </div>
                                 </div>
                             </div>
@@ -117,19 +116,19 @@
                                 <div class="mb-3">
                                     <div class="d-flex justify-content-between mb-1">
                                         <span>Bootstrap</span>
-                                        <span class="text-primary">85%</span>
+                                        <span class="text-primary">40%</span>
                                     </div>
                                     <div class="progress" style="height: 8px;">
-                                        <div class="progress-bar bg-info" style="width: 85%"></div>
+                                        <div class="progress-bar bg-info" style="width: 40%"></div>
                                     </div>
                                 </div>
                                 <div class="mb-3">
                                     <div class="d-flex justify-content-between mb-1">
                                         <span>Flutter</span>
-                                        <span class="text-primary">60%</span>
+                                        <span class="text-primary">50%</span>
                                     </div>
                                     <div class="progress" style="height: 8px;">
-                                        <div class="progress-bar bg-warning" style="width: 60%"></div>
+                                        <div class="progress-bar bg-warning" style="width: 50%"></div>
                                     </div>
                                 </div>
                             </div>
@@ -138,7 +137,6 @@
                 </div>
             </section>
 
-            <!-- Projects Section -->
             <section class="mb-5">
                 <div class="card shadow-sm">
                     <div class="card-header bg-light">
@@ -150,7 +148,8 @@
                         <div class="row g-3">
                             <div class="col-md-4">
                                 <div class="card h-100">
-                                    <img src="images/project1.jpg" class="card-img-top" alt="Личный сайт" style="height: 150px; object-fit: cover;">
+                                    <img src="images/project1.jpg" class="card-img-top" alt="Личный сайт"
+                                        style="height: 150px; object-fit: cover;">
                                     <div class="card-body">
                                         <h5 class="card-title">Личный сайт</h5>
                                         <p class="card-text small text-muted">
@@ -166,7 +165,8 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="card h-100">
-                                    <img src="images/project2.jpg" class="card-img-top" alt="Todo приложение" style="height: 150px; object-fit: cover;">
+                                    <img src="images/project2.jpg" class="card-img-top" alt="Todo приложение"
+                                        style="height: 150px; object-fit: cover;">
                                     <div class="card-body">
                                         <h5 class="card-title">Todo приложение</h5>
                                         <p class="card-text small text-muted">
@@ -181,11 +181,12 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="card h-100">
-                                    <img src="images/project3.jpg" class="card-img-top" alt="Интернет-магазин" style="height: 150px; object-fit: cover;">
+                                    <img src="images/project3.jpg" class="card-img-top" alt="Приложение баз данных"
+                                        style="height: 150px; object-fit: cover;">
                                     <div class="card-body">
-                                        <h5 class="card-title">Интернет-магазин</h5>
+                                        <h5 class="card-title">Приложение баз данных</h5>
                                         <p class="card-text small text-muted">
-                                            Прототип интернет-магазина с корзиной товаров и фильтрацией.
+                                            Десктоп приложение для управления базой данных на Python с PostgreSQL.
                                         </p>
                                         <div class="mb-2">
                                             <span class="badge bg-info">React</span>
@@ -200,7 +201,6 @@
             </section>
         </main>
 
-        <!-- Footer -->
         <footer class="bg-dark text-white py-4 mt-5">
             <div class="container">
                 <div class="row align-items-center">
@@ -220,4 +220,5 @@
     <script src="scripts/script.js"></script>
     <script src="/Portfolio_project/script/script.js"></script>
 </body>
+
 </html>
