--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="icon" type="image/x-icon" href="images/icons/favicon.ico">
+
 </head>
+
 <body class="bg-light">
     <div class="container-fluid p-0">
-        <!-- Header -->
         <header class="bg-primary text-white py-4">
             <div class="container">
                 <div class="row align-items-center">
@@ -22,7 +25,6 @@
             </div>
         </header>
 
-        <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -55,9 +57,7 @@
             </div>
         </nav>
 
-        <!-- Main Content -->
         <main class="container my-5">
-            <!-- Page Header -->
             <div class="row mb-4">
                 <div class="col">
                     <h1 class="display-5 text-center text-primary">Контакты</h1>
@@ -66,7 +66,6 @@
             </div>
 
             <div class="row">
-                <!-- Contact Form -->
                 <div class="col-lg-7 mb-4">
                     <div class="card shadow-sm">
                         <div class="card-header bg-light">
@@ -102,9 +101,7 @@
                     </div>
                 </div>
 
-                <!-- Contact Information & Map -->
                 <div class="col-lg-5">
-                    <!-- Contact Information -->
                     <div class="card shadow-sm mb-4">
                         <div class="card-header bg-light">
                             <h3 class="card-title h5 mb-0">
@@ -119,7 +116,7 @@
                                 <div>
                                     <h6 class="mb-1">Email</h6>
                                     <a href="mailto:dasha.petushkova@example.com" class="text-decoration-none">
-                                        dasha.petushkova@example.com
+                                        dasha.petushkova@yandex.ru
                                     </a>
                                 </div>
                             </div>
@@ -142,8 +139,9 @@
                                 </div>
                                 <div>
                                     <h6 class="mb-1">GitHub</h6>
-                                    <a href="https://github.com/yourusername" target="_blank" class="text-decoration-none">
-                                        github.com/yourusername
+                                    <a href="https://github.com/yourusername" target="_blank"
+                                        class="text-decoration-none">
+                                        https://github.com/fetrias
                                     </a>
                                 </div>
                             </div>
@@ -160,7 +158,6 @@
                         </div>
                     </div>
 
-                    <!-- Real Map -->
                     <div class="card shadow-sm">
                         <div class="card-header bg-light">
                             <h3 class="card-title h5 mb-0">
@@ -168,13 +165,9 @@
                             </h3>
                         </div>
                         <div class="card-body p-0">
-                            <iframe 
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2245.372789905729!2d37.61729927657803!3d55.75582600000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a50b315e573%3A0xa886bf5a3d9b2e68!2z0JzQvtGB0LrQstCw!5e0!3m2!1sru!2sru!4v1700000000000!5m2!1sru!2sru" 
-                                width="100%" 
-                                height="250" 
-                                style="border:0;" 
-                                allowfullscreen="" 
-                                loading="lazy" 
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2245.372789905729!2d37.61729927657803!3d55.75582600000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a50b315e573%3A0xa886bf5a3d9b2e68!2z0JzQvtGB0LrQstCw!5e0!3m2!1sru!2sru!4v1700000000000!5m2!1sru!2sru"
+                                width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade">
                             </iframe>
                         </div>
@@ -183,7 +176,6 @@
             </div>
         </main>
 
-        <!-- Footer -->
         <footer class="bg-dark text-white py-4 mt-5">
             <div class="container">
                 <div class="row align-items-center">
@@ -202,4 +194,5 @@
     <script src="../scripts/form-validation.js"></script>
     <script src="/Portfolio_project/script/form-validation.js"></script>
 </body>
+
 </html>
