--- a/pages/diary.html
+++ b/pages/diary.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="icon" type="image/x-icon" href="images/icons/favicon.ico">
+
 </head>
+
 <body class="bg-light">
     <div class="container-fluid p-0">
-        <!-- Header -->
         <header class="bg-primary text-white py-4">
             <div class="container">
                 <div class="row align-items-center">
@@ -22,7 +25,6 @@
             </div>
         </header>
 
-        <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -55,9 +57,7 @@
             </div>
         </nav>
 
-        <!-- Main Content -->
         <main class="container my-5">
-            <!-- Page Header -->
             <div class="row mb-4">
                 <div class="col">
                     <h1 class="display-5 text-center text-primary">Учебный дневник</h1>
@@ -65,7 +65,6 @@
                 </div>
             </div>
 
-            <!-- Progress Section -->
             <div class="row mb-5">
                 <div class="col">
                     <div class="card shadow-sm">
@@ -80,20 +79,20 @@
                                     <div class="mb-4">
                                         <div class="d-flex justify-content-between mb-2">
                                             <span class="fw-bold">Веб-разработка</span>
-                                            <span class="text-primary">90%</span>
+                                            <span class="text-primary">50%</span>
                                         </div>
                                         <div class="progress" style="height: 10px;">
-                                            <div class="progress-bar bg-success" style="width: 90%"></div>
+                                            <div class="progress-bar bg-success" style="width: 50%"></div>
                                         </div>
                                         <small class="text-muted">HTML, CSS, JavaScript, Bootstrap</small>
                                     </div>
                                     <div class="mb-4">
                                         <div class="d-flex justify-content-between mb-2">
                                             <span class="fw-bold">Базы данных</span>
-                                            <span class="text-primary">75%</span>
+                                            <span class="text-primary">25%</span>
                                         </div>
                                         <div class="progress" style="height: 10px;">
-                                            <div class="progress-bar bg-info" style="width: 75%"></div>
+                                            <div class="progress-bar bg-info" style="width: 25%"></div>
                                         </div>
                                         <small class="text-muted">SQL, PostgreSQL, Python</small>
                                     </div>
@@ -102,20 +101,20 @@
                                     <div class="mb-4">
                                         <div class="d-flex justify-content-between mb-2">
                                             <span class="fw-bold">Мобильная разработка</span>
-                                            <span class="text-primary">60%</span>
+                                            <span class="text-primary">40%</span>
                                         </div>
                                         <div class="progress" style="height: 10px;">
-                                            <div class="progress-bar bg-warning" style="width: 60%"></div>
+                                            <div class="progress-bar bg-warning" style="width: 40%"></div>
                                         </div>
                                         <small class="text-muted">Flutter, Dart</small>
                                     </div>
                                     <div class="mb-4">
                                         <div class="d-flex justify-content-between mb-2">
                                             <span class="fw-bold">Алгоритмы</span>
-                                            <span class="text-primary">50%</span>
+                                            <span class="text-primary">100%</span>
                                         </div>
                                         <div class="progress" style="height: 10px;">
-                                            <div class="progress-bar bg-primary" style="width: 50%"></div>
+                                            <div class="progress-bar bg-primary" style="width: 100%"></div>
                                         </div>
                                         <small class="text-muted">Python, Структуры данных</small>
                                     </div>
@@ -126,7 +125,6 @@
                 </div>
             </div>
 
-            <!-- Diary Entries -->
             <div class="row">
                 <div class="col">
                     <div class="card shadow-sm">
@@ -137,7 +135,6 @@
                             </h3>
                         </div>
                         <div class="card-body" id="diaryEntriesContainer">
-                            <!-- Entry 1 -->
                             <div class="diary-entry mb-4 p-3 border-start border-4 border-success">
                                 <div class="d-flex justify-content-between align-items-start mb-2">
                                     <h5 class="mb-0 text-success">Верстка макета сайта</h5>
@@ -146,7 +143,8 @@
                                 <div class="text-muted mb-2">
                                     <i class="bi bi-calendar me-1"></i>15 декабря 2024
                                 </div>
-                                <p class="mb-2">Освоила основы HTML и CSS, создала адаптивный макет портфолио с использованием Bootstrap.</p>
+                                <p class="mb-2">Освоила основы HTML и CSS, создала адаптивный макет портфолио с
+                                    использованием Bootstrap.</p>
                                 <div class="tech-tags">
                                     <span class="badge bg-primary me-1">HTML</span>
                                     <span class="badge bg-primary me-1">CSS</span>
@@ -154,7 +152,6 @@
                                 </div>
                             </div>
 
-                            <!-- Entry 2 -->
                             <div class="diary-entry mb-4 p-3 border-start border-4 border-success">
                                 <div class="d-flex justify-content-between align-items-start mb-2">
                                     <h5 class="mb-0 text-success">Основы JavaScript</h5>
@@ -163,13 +160,13 @@
                                 <div class="text-muted mb-2">
                                     <i class="bi bi-calendar me-1"></i>10 декабря 2024
                                 </div>
-                                <p class="mb-2">Изучила базовые концепции JavaScript: переменные, функции, обработка событий.</p>
+                                <p class="mb-2">Изучила базовые концепции JavaScript: переменные, функции, обработка
+                                    событий.</p>
                                 <div class="tech-tags">
                                     <span class="badge bg-success me-1">JavaScript</span>
                                 </div>
                             </div>
 
-                            <!-- Entry 3 -->
                             <div class="diary-entry mb-4 p-3 border-start border-4 border-warning">
                                 <div class="d-flex justify-content-between align-items-start mb-2">
                                     <h5 class="mb-0 text-warning">Работа с формами</h5>
@@ -178,14 +175,14 @@
                                 <div class="text-muted mb-2">
                                     <i class="bi bi-calendar me-1"></i>5 декабря 2024
                                 </div>
-                                <p class="mb-2">Изучаю валидацию форм, работу с LocalStorage и создание интерактивных элементов.</p>
+                                <p class="mb-2">Изучаю валидацию форм, работу с LocalStorage и создание интерактивных
+                                    элементов.</p>
                                 <div class="tech-tags">
                                     <span class="badge bg-success me-1">JavaScript</span>
                                     <span class="badge bg-info me-1">Forms</span>
                                 </div>
                             </div>
 
-                            <!-- Entry 4 -->
                             <div class="diary-entry mb-4 p-3 border-start border-4 border-secondary">
                                 <div class="d-flex justify-content-between align-items-start mb-2">
                                     <h5 class="mb-0 text-secondary">Базы данных и Python</h5>
@@ -194,7 +191,8 @@
                                 <div class="text-muted mb-2">
                                     <i class="bi bi-calendar me-1"></i>1 января 2025
                                 </div>
-                                <p class="mb-2">Планирую изучить основы PostgreSQL и интеграцию с Python приложениями.</p>
+                                <p class="mb-2">Планирую изучить основы PostgreSQL и интеграцию с Python приложениями.
+                                </p>
                                 <div class="tech-tags">
                                     <span class="badge bg-info me-1">Python</span>
                                     <span class="badge bg-warning me-1">PostgreSQL</span>
@@ -202,7 +200,8 @@
                             </div>
                         </div>
                         <div class="card-footer bg-light">
-                            <button class="btn btn-primary w-100" data-bs-toggle="modal" data-bs-target="#addEntryModal">
+                            <button class="btn btn-primary w-100" data-bs-toggle="modal"
+                                data-bs-target="#addEntryModal">
                                 <i class="bi bi-plus-circle me-2"></i>Добавить запись
                             </button>
                         </div>
@@ -210,7 +209,6 @@
                 </div>
             </div>
 
-            <!-- Modal для добавления записи -->
             <div class="modal fade" id="addEntryModal" tabindex="-1">
                 <div class="modal-dialog">
                     <div class="modal-content">
@@ -242,21 +240,22 @@
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label">Технологии (через запятую)</label>
-                                    <input type="text" class="form-control" id="entryTechnologies" placeholder="HTML, CSS, JavaScript">
+                                    <input type="text" class="form-control" id="entryTechnologies"
+                                        placeholder="HTML, CSS, JavaScript">
                                 </div>
                             </form>
                             <div id="diaryFormAlert" class="alert alert-danger d-none" role="alert"></div>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
-                            <button type="button" class="btn btn-primary" onclick="validateDiaryForm()">Добавить запись</button>
+                            <button type="button" class="btn btn-primary" onclick="validateDiaryForm()">Добавить
+                                запись</button>
                         </div>
                     </div>
                 </div>
             </div>
         </main>
 
-        <!-- Footer -->
         <footer class="bg-dark text-white py-4 mt-5">
             <div class="container">
                 <div class="row align-items-center">
@@ -277,4 +276,5 @@
     <script src="/Portfolio_project/script/modal.js"></script>
     <script src="/Portfolio_project/script/form-validation.js"></script>
 </body>
+
 </html>
