--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -195,7 +195,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../scripts/form-validation.js"></script>
+    <script src="../scripts/main.js"></script>
     <script src="/Portfolio_project/script/form-validation.js"></script>
+    <script src="/Portfolio_project/script/main.js"></script>
 </body>
 
 </html>
