--- a/pages/projects.html
+++ b/pages/projects.html
@@ -86,44 +86,46 @@
                 </div>
             </div>
 
-            <div class="row g-4">
-                <div class="projects-container">
-                    <div class="projects-grid">
-                        <div class="col-md-6 col-lg-4 project-card" data-technologies="html">
-                            <div class="card h-100 shadow-sm">
-                                <img src="../images/project1.jpg"
-                                    srcset="../images/project1.jpg 300w, ../images/project1.jpg 400w, ../images/project1.jpg 600w"
-                                    sizes="(max-width: 576px) 300px, (max-width: 992px) 350px, 400px" width="400"
-                                    height="200" alt="Личный сайт" style="height: 200px; object-fit: cover;"
-                                    loading="lazy">
-                                <div class="card-body d-flex flex-column">
-                                    <h5 class="card-title">Личный сайт</h5>
-                                    <p class="card-text flex-grow-1">
-                                        Сайт-портфолио на HTML, CSS и Bootstrap с адаптивным дизайном и современным
-                                        интерфейсом.
-                                    </p>
-                                    <div class="mt-auto">
-                                        <div class="mb-2">
-                                            <span class="badge bg-primary">HTML/CSS</span>
-                                        </div>
-                                        <button class="btn btn-primary w-100" data-bs-toggle="modal"
-                                            data-bs-target="#project1Modal">
-                                            Подробнее
-                                        </button>
-                                    </div>
+            <!-- Projects Grid - ГРИД СЕТКА как в практичке -->
+            <div class="projects-grid">
+                <!-- Project 1 -->
+                <div class="project-card" data-technologies="html">
+                    <div class="card h-100 shadow-sm project-card-item">
+                        <div class="card-image-container">
+                            <img src="../images/project1.jpg"
+                                srcset="../images/project1.jpg 300w, ../images/project1.jpg 400w, ../images/project1.jpg 600w"
+                                sizes="(max-width: 576px) calc(100vw - 2rem), (max-width: 768px) calc(50vw - 2rem), (max-width: 1200px) calc(33.333vw - 2rem), 350px"
+                                width="400" height="225" alt="Личный сайт" class="card-img-top" loading="lazy">
+                        </div>
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">Личный сайт</h5>
+                            <p class="card-text flex-grow-1">
+                                Сайт-портфолио на HTML, CSS и Bootstrap с адаптивным дизайном и современным интерфейсом.
+                            </p>
+                            <div class="mt-auto">
+                                <div class="mb-2">
+                                    <span class="badge bg-primary">HTML</span>
+                                    <span class="badge bg-primary">CSS</span>
+                                    <span class="badge bg-primary">Bootstrap</span>
                                 </div>
+                                <button class="btn btn-primary w-100" data-bs-toggle="modal"
+                                    data-bs-target="#project1Modal">
+                                    Подробнее
+                                </button>
                             </div>
                         </div>
                     </div>
                 </div>
 
-
-                <div class="col-md-6 col-lg-4 project-card" data-technologies="flutter">
-                    <div class="card h-100 shadow-sm">
-                        <img src="../images/project2.jpg"
-                            srcset="../images/project2.jpg 300w, ../images/project2.jpg 400w, ../images/project2.jpg 600w"
-                            sizes="(max-width: 576px) 300px, (max-width: 992px) 350px, 400px" width="400" height="200"
-                            alt="Личный сайт" style="height: 200px; object-fit: cover;" loading="lazy">
+                <!-- Project 2 -->
+                <div class="project-card" data-technologies="flutter">
+                    <div class="card h-100 shadow-sm project-card-item">
+                        <div class="card-image-container">
+                            <img src="../images/project2.jpg"
+                                srcset="../images/project2.jpg 300w, ../images/project2.jpg 400w, ../images/project2.jpg 600w"
+                                sizes="(max-width: 576px) calc(100vw - 2rem), (max-width: 768px) calc(50vw - 2rem), (max-width: 1200px) calc(33.333vw - 2rem), 350px"
+                                width="400" height="225" alt="Мобильное приложение" class="card-img-top" loading="lazy">
+                        </div>
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">Мобильное приложение</h5>
                             <p class="card-text flex-grow-1">
@@ -132,6 +134,7 @@
                             <div class="mt-auto">
                                 <div class="mb-2">
                                     <span class="badge bg-success">Flutter</span>
+                                    <span class="badge bg-success">Dart</span>
                                 </div>
                                 <button class="btn btn-primary w-100" data-bs-toggle="modal"
                                     data-bs-target="#project2Modal">
@@ -142,12 +145,16 @@
                     </div>
                 </div>
 
-                <div class="col-md-6 col-lg-4 project-card" data-technologies="python">
-                    <div class="card h-100 shadow-sm">
-                        <img src="../images/project3.jpg"
-                            srcset="../images/project3.jpg 300w, ../images/project3.jpg 400w, ../images/project3.jpg 600w"
-                            sizes="(max-width: 576px) 300px, (max-width: 992px) 350px, 400px" width="400" height="200"
-                            alt="Личный сайт" style="height: 200px; object-fit: cover;" loading="lazy">
+                <!-- Project 3 -->
+                <div class="project-card" data-technologies="python">
+                    <div class="card h-100 shadow-sm project-card-item">
+                        <div class="card-image-container">
+                            <img src="../images/project3.jpg"
+                                srcset="../images/project3.jpg 300w, ../images/project3.jpg 400w, ../images/project3.jpg 600w"
+                                sizes="(max-width: 576px) calc(100vw - 2rem), (max-width: 768px) calc(50vw - 2rem), (max-width: 1200px) calc(33.333vw - 2rem), 350px"
+                                width="400" height="225" alt="Приложение баз данных" class="card-img-top"
+                                loading="lazy">
+                        </div>
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">Приложение баз данных</h5>
                             <p class="card-text flex-grow-1">
@@ -156,7 +163,8 @@
                             </p>
                             <div class="mt-auto">
                                 <div class="mb-2">
-                                    <span class="badge bg-info">Python/PostgreSQL</span>
+                                    <span class="badge bg-info">Python</span>
+                                    <span class="badge bg-info">PostgreSQL</span>
                                 </div>
                                 <button class="btn btn-primary w-100" data-bs-toggle="modal"
                                     data-bs-target="#project3Modal">
